--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </section>
     <section class="about" id="about">
         <h2>About Us</h2>
-        <p>testing for github</p>
+        <p>testing from github</p>
     </section>
     <section class="product" id="product">
         <h2>Product & Services</h2>
