add p tag and wrote my navin

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <section class="about" id="about">
         <h2>About Us</h2>
         <p>testing from github</p>
+        <p>Hello i am navin.</p>
     </section>
     <section class="product" id="product">
         <h2>Product & Services</h2>
