css about section

--- a/index.html
+++ b/index.html
@@ -31,8 +31,23 @@
     <section class="about" id="about">
       <h2>About Us</h2>
       <p>We are committed to supporting local farmers and creating a sustainable future for agriculture.</p>
-    </section>
-    
+      <div class="aboutbox1">
+        <div class="aboutbox2">
+          <h3>Our Mission</h3>
+          <img src="/images/shelley-pauls-Zaiuy5dKeCk-unsplash.jpg" alt="meeting" class="aboutimg">
+          <p>JA角田は、地域農業者を支援し、持続可能な農業を推進することで、組合員の経済的安定と地域社会の発展を目指します。</p>
+          <a href="info1" class="cta-button">learn More</a>
+        </div>
+        <div class="aboutbox2">
+          <h3>Our Values</h3>
+          <img src="/images/zoe-richardson-siD6uufCyt8-unsplash.jpg" alt="vegetables to the customer" class="aboutimg">
+          <p>私たちは、協力、持続可能性、信頼を基盤に、地域社会との絆を深め、環境に配慮した農業を実現します。</p>
+          <a href="info1" class="cta-button">learn More</a>
+   
+        </div>
+      </div>
+   
+    </section>    
     <section class="product" id="product">
       <h2>Products & Services</h2>
       <p>Explore a variety of products and services designed to meet your agricultural needs.</p>
