--- a/index.html
+++ b/index.html
@@ -93,60 +93,24 @@
     <section class="services">
       <h2>JA みやぎ角田のサービス</h2>
       <p class="servicesparagraph">Special services</p>
-      <div class="services_container slider ">
-        <div class="services_box slide">
-          <div class="servicesimgbox">
-            <img src="./images/raphael-rychetsky-li9JfUHQfOY-unsplash (1).jpg" alt="image1" class="servicesimg">
-          </div>
-          <div class="services_content">
-            <h3 class="services_subtitle">Savings & Deposits (預金・貯金)</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus vero voluptatem veniam sed, hic,
-              placeat incidunt inventore magni aut culpa ex, ad quibusdam voluptatibus esse aliquid voluptate.
-              Laboriosam,
-              odit atque?</p>
-            <a href="info1" class="cta-button">learn More</a>
-          </div>
+      <!-- Swiper -->
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">Slide 1</div>
+          <div class="swiper-slide">Slide 2</div>
+          <div class="swiper-slide">Slide 3</div>
+          <div class="swiper-slide">Slide 4</div>
+          <div class="swiper-slide">Slide 5</div>
+          <div class="swiper-slide">Slide 6</div>
+          <div class="swiper-slide">Slide 7</div>
+          <div class="swiper-slide">Slide 8</div>
+          <div class="swiper-slide">Slide 9</div>
         </div>
-        <div class="services_box slide ">
-          <div class="servicesimgbox">
-            <img src="./images/raphael-rychetsky-li9JfUHQfOY-unsplash (1).jpg" alt="image1" class="servicesimg">
-          </div>
-          <div class="services_content">
-            <h3 class="services_subtitle">Savings & Deposits (預金・貯金)</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus vero voluptatem veniam sed, hic,
-              placeat incidunt inventore magni aut culpa ex, ad quibusdam voluptatibus esse aliquid voluptate.
-              Laboriosam,
-              odit atque?</p>
-            <a href="info1" class="cta-button">learn More</a>
-          </div>
-        </div>
-        <div class="services_box slide ">
-          <div class="servicesimgbox">
-            <img src="./images/raphael-rychetsky-li9JfUHQfOY-unsplash (1).jpg" alt="image1" class="servicesimg">
-          </div>
-          <div class="services_content">
-            <h3 class="services_subtitle">Savings & Deposits (預金・貯金)</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus vero voluptatem veniam sed, hic,
-              placeat incidunt inventore magni aut culpa ex, ad quibusdam voluptatibus esse aliquid voluptate.
-              Laboriosam,
-              odit atque?</p>
-            <a href="info1" class="cta-button">learn More</a>
-          </div>
-        </div>
-        <div class="services_box slide ">
-          <div class="servicesimgbox">
-            <img src="/images/raphael-rychetsky-li9JfUHQfOY-unsplash (1).jpg" alt="image1" class="servicesimg">
-          </div>
-          <div class="services_content">
-            <h3 class="services_subtitle">Savings & Deposits (預金・貯金)</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus vero voluptatem veniam sed, hic,
-              placeat incidunt inventore magni aut culpa ex, ad quibusdam voluptatibus esse aliquid voluptate.
-              Laboriosam,
-              odit atque?</p>
-            <a href="info1" class="cta-button">learn More</a>
-          </div>
-        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
       </div>
+
     </section>
   </section>
 
@@ -232,69 +196,70 @@
 
   <footer>
     <div class="footer-top">
-        <!-- Company Info & Map -->
-        <div>
-            <h3>農協角田支店</h3>
-            <p>住所: 宮城県角田市角田字町 123<br>
-            📞 電話番号: 012-3456-7890<br>
-            ⏰ 営業時間: 平日 9:00～15:00</p>
-        </div>
-        <div class="map">
-            <!-- Add map iframe here -->
-            <h3>Location</h3>
-            <img src="./images/map-image.png" class="map">
-        </div>
+      <!-- Company Info & Map -->
+      <div>
+        <h3>農協角田支店</h3>
+        <p>住所: 宮城県角田市角田字町 123<br>
+          📞 電話番号: 012-3456-7890<br>
+          ⏰ 営業時間: 平日 9:00～15:00</p>
+      </div>
+      <div class="map">
+        <!-- Add map iframe here -->
+        <h3>Location</h3>
+        <img src="./images/map-image.png" class="map">
+      </div>
     </div>
 
     <div class="footer-bottom">
-        <!-- Social -->
-        <div>
-            <h4>Follow Us</h4>
-            <div class="social">
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-            </div>
+      <!-- Social -->
+      <div>
+        <h4>Follow Us</h4>
+        <div class="social">
+          <a href="#"><i class="fab fa-facebook"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
-
-            <!-- Links Section -->
-            <div class="footer-links">
-              <h3>Links</h3>
-              <ul type="none">
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Contact</a></li>
-                  <li><a href="#">FAQ</a></li>
-              </ul>
-          </div>
-          
-          <!-- Services Section -->
-          <div class="footer-services">
-              <h3>Services</h3>
-              <ul type="none">
-                  <li><a href="#">Consulting</a></li>
-                  <li><a href="#">Support</a></li>
-                  <li><a href="#">Custom Solutions</a></li>
-                  <li><a href="#">Training</a></li>
-              </ul>
-          </div>
-
-          <!-- Legal Section -->
-          <div class="footer-legal">
-              <h3>Legal</h3>
-              <ul type="none">
-                  <li><a href="#">Privacy Policy</a></li>
-                  <li><a href="#">Terms of Service</a></li>
-                  <li><a href="#">Cookie Policy</a></li>
-                  <li><a href="#">Disclaimer</a></li>
-              </ul>
-          </div>
       </div>
-    <div class="copyright">
-        © 2023 Company Name. All rights reserved.
+
+      <!-- Links Section -->
+      <div class="footer-links">
+        <h3>Links</h3>
+        <ul type="none">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">FAQ</a></li>
+        </ul>
+      </div>
+
+      <!-- Services Section -->
+      <div class="footer-services">
+        <h3>Services</h3>
+        <ul type="none">
+          <li><a href="#">Consulting</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Custom Solutions</a></li>
+          <li><a href="#">Training</a></li>
+        </ul>
+      </div>
+
+      <!-- Legal Section -->
+      <div class="footer-legal">
+        <h3>Legal</h3>
+        <ul type="none">
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Terms of Service</a></li>
+          <li><a href="#">Cookie Policy</a></li>
+          <li><a href="#">Disclaimer</a></li>
+        </ul>
+      </div>
     </div>
-</footer>
+    <div class="copyright">
+      © 2023 Company Name. All rights reserved.
+    </div>
+  </footer>
 
 
 </body>
+
 </html>
