--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="style.css" />
   <!-- Link of Swiperjs for Slider -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -23,20 +24,8 @@
         <li><a href="#resources">Resources</a></li>
         <li><a href="#contact">Contact Us</a></li>
       </ul>
-      <div class="hamburger-icon" onclick="toggleNav()">
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <ul class="side-nav" id="sideNav">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About Us</a></li>
-        <li><a href="#product">Products & Services</a></li>
-        <li><a href="#resources">Resources</a></li>
-        <li><a href="#contact">Contact Us</a></li>
-      </ul>
-
-    </nav>
+    </nav> 
+    <box-icon name='menu' id="menu-btn">hjkbyukjhfvkuyhjfvkuyhgvhmv</box-icon>
   </header>
 
   <section class="home" id="home">
