responsive design and humburger menu

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <li><a href="#resources">Resources</a></li>
         <li><a href="#contact">Contact Us</a></li>
       </ul>
+      <div id="menu-btn"><i class='bx bx-menu'></i></div>
     </nav> 
-    <box-icon name='menu' id="menu-btn">hjkbyukjhfvkuyhjfvkuyhgvhmv</box-icon>
   </header>
 
   <section class="home" id="home">
